Integrating shad-svelte with skeleton and fixing the printing on mobile

--- a/sv5/src/app.css
+++ b/sv5/src/app.css
@@ -1,12 +1,83 @@
-@import 'tailwindcss';
+@import "tailwindcss";
+@config "../tailwind.config.ts";
+
 @import '@skeletonlabs/skeleton';
 @import '@skeletonlabs/skeleton/optional/presets';
 @import '@skeletonlabs/skeleton/themes/cerberus';
+
 @source '../node_modules/@skeletonlabs/skeleton-svelte/dist';
-@theme {
-  --font-inter: "Inter", "sans-serif";
-  --font-ibm: "IBM Plex Mono", "monospace";
-  --font-ibm-bold: "IBM Plex Mono Bold", "monospace";
-  --font-roboto: "Roboto Mono", "monospace";
-  --font-ubuntu: "Ubuntu Mono", "monospace";
+
+@layer base {
+  :root {
+    --background: rgb(255 255 255);
+    --foreground: rgb(13 8 51);
+
+    --muted: rgb(241 245 249);
+    --muted-foreground: rgb(100 116 139);
+
+    --popover: rgb(255 255 255);
+    --popover-foreground: rgb(13 8 51);
+
+    --card: rgb(255 255 255);
+    --card-foreground: rgb(13 8 51);
+
+    --border: rgb(226 232 240);
+    --input: rgb(226 232 240);
+
+    --primary: rgb(15 23 42);
+    --primary-foreground: rgb(248 250 252);
+
+    --secondary: rgb(241 245 249);
+    --secondary-foreground: rgb(15 23 42);
+
+    --accent: rgb(241 245 249);
+    --accent-foreground: rgb(15 23 42);
+
+    --destructive: rgb(239 68 68);
+    --destructive-foreground: rgb(248 250 252);
+
+    --ring: rgb(13 8 51);
+
+    --radius: 0.5rem;
+  }
+
+  .dark {
+    --background: rgb(15 23 42);
+    --foreground: rgb(248 250 252);
+
+    --muted: rgb(30 41 59);
+    --muted-foreground: rgb(148 163 184);
+
+    --popover: rgb(15 23 42);
+    --popover-foreground: rgb(248 250 252);
+
+    --card: rgb(15 23 42);
+    --card-foreground: rgb(248 250 252);
+
+    --border: rgb(30 41 59);
+    --input: rgb(30 41 59);
+
+    --primary: rgb(248 250 252);
+    --primary-foreground: rgb(15 23 42);
+
+    --secondary: rgb(30 41 59);
+    --secondary-foreground: rgb(248 250 252);
+
+    --accent: rgb(30 41 59);
+    --accent-foreground: rgb(248 250 252);
+
+    --destructive: rgb(127 29 29);
+    --destructive-foreground: rgb(248 250 252);
+
+    --ring: rgb(226 232 240);
+  }
+}
+
+@layer base {
+  * {
+    @apply border-border;
+  }
+  body {
+    @apply bg-background text-foreground;
+  }
 }
